# ceres-mpq

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: archive.rs  builder.rs  consts.rs  creator.rs  crypto.rs  error.rs  header.rs  lib.rs  seeker.rs  table.rs  tables.rs  util.rs
tool/: Cargo.toml
tool/src/: main.rs
