[package]
name = "ceres-mpq"
description = "A pure-rust implementation of a MoPaQ archive reader and writer"
version = "0.1.0"
authors = ["ElusiveMori <mori@reu.moe>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
lazy_static = "1.3.0"
err-derive = "0.1.5"
byte-slice-cast = "0.3.2"
flate2 = "1.0.9"
bzip2 = "0.3.3"
indexmap = "1.0.2"