[package]
workspace = "../"
name = "mpqtool"
version = "0.1.0"
authors = ["ElusiveMori <mori@reu.moe>"]
description = "A command-line tool for reading and creating Blizzard's MPQ archives"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ceres-mpq = "0.1.0"
clap = "2"
